--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>个人空间</title>
     <style>
         div{position:relative;}
-        h1{font-size:36px;color:white;position:absolute;top:45px;left:40px;}
+        h1{font-size:36px;color:blue;position:absolute;top:45px;left:40px;}
     </style>
 </head>
 <body>
