--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>个人空间</title>
     <style>
         div{position:relative;}
-        h1{font-size:36px;color:blue;position:absolute;top:45px;left:40px;}
+        h1{font-size:36px;position:absolute;top:45px;left:40px;}
     </style>
 </head>
 <body>
 <div> 
-     <h1>欢迎你哦！你的名字是我最美的星空。<h1>   
+     <h1>欢迎你哦！你的名字是我最美的星空。</h1>   
 </div>
 </body>
 </html>
