--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
 <div> 
-     <h1>欢迎你哦！你的名字是我最美的星空。</h1>   
+     <h1>欢迎你哦！你的出现是最美的风景。</h1> 
+     <img src="http://labfile.oss.aliyuncs.com/courses/1236/coder.jpg"  alt="程序员" title="你好啊" width="700px" height="600px"/>
+     <audio controls>
+            <source src="http://labfile.oss.aliyuncs.com/courses/1236/平凡之路.mp3" type="audio/mp3">
+                平凡之路
+     </audio>
 </div>
 </body>
 </html>
