--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <title>个人空间</title>
     <style>
         div{position:relative;}
-        h1{font-size:36px;position:absolute;top:45px;left:740px;}
+        h1{font-size:36px;position:absolute;top:45px;left:600px;}
     </style>
 </head>
 <body>
 <div> 
      <h1>欢迎你哦！你的出现是最美的风景。</h1> 
-     <img src="http://labfile.oss.aliyuncs.com/courses/1236/coder.jpg"  alt="程序员" title="你好啊" width="700px" height="600px"/>
+     <img src="http://labfile.oss.aliyuncs.com/courses/1236/coder.jpg"  alt="程序员" width="700px" height="600px"/>
      <audio controls>
+	     <p>平凡之路</P>
             <source src="http://labfile.oss.aliyuncs.com/courses/1236/平凡之路.mp3" type="audio/mp3">
+	
      </audio>
 </div>
 </body>
