--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <div> 
      <h1>欢迎你哦！你的出现是最美的风景。</h1> 
      <img src="http://labfile.oss.aliyuncs.com/courses/1236/coder.jpg"  alt="程序员" width="700px" height="600px"/>
+	<p>平凡之路</p>
      <audio controls>
-	     <p>平凡之路</P>
             <source src="http://labfile.oss.aliyuncs.com/courses/1236/平凡之路.mp3" type="audio/mp3">
-	
+     </audio>
+	<p>The World Is Asleep</p>
+<audio controls>
+            <source src="music/IsotlanD - The World Is Asleep.mp3" type="audio/mp3">
      </audio>
 </div>
 </body>
