--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      <h1>欢迎你哦！你的出现是最美的风景。</h1> 
      <img src="http://labfile.oss.aliyuncs.com/courses/1236/coder.jpg"  alt="程序员" width="700px" height="600px"/>
 </div>
+	<aside>
 	<p>平凡之路</p>
      <audio controls>
             <source src="http://labfile.oss.aliyuncs.com/courses/1236/平凡之路.mp3" type="audio/mp3">
@@ -21,6 +22,6 @@
      <audio controls>
             <source src="music/1.mp3" type="audio/mp3">
      </audio>
-
+	</aside>
 </body>
 </html>
