--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
     </style>
 </head>
 <body>
+		<aside>
+		<ul>
+	<li>平凡之路</li>
+     <audio controls>
+            <source src="http://labfile.oss.aliyuncs.com/courses/1236/平凡之路.mp3" type="audio/mp3">
+     </audio>
+	<li>The World Is Asleep</li>
+     <audio controls>
+            <source src="music/1.mp3" type="audio/mp3">
+     </audio>
+		</ul>
+	</aside>
 <div> 
      <h1>欢迎你哦！你的出现是最美的风景。</h1> 
      <img src="http://labfile.oss.aliyuncs.com/courses/1236/coder.jpg"  alt="程序员" width="700px" height="600px"/>
 </div>
-	<aside>
-	<p>平凡之路</p>
-     <audio controls>
-            <source src="http://labfile.oss.aliyuncs.com/courses/1236/平凡之路.mp3" type="audio/mp3">
-     </audio>
-	<p>The World Is Asleep</p>
-     <audio controls>
-            <source src="music/1.mp3" type="audio/mp3">
-     </audio>
-	</aside>
 </body>
 </html>
